# surfacetension

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/crossfire/: CMakeLists.txt  crossfire.cpp  crossfire.h  game.cpp  game.h  main.cpp
apps/test_windows/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/graphics/: CMakeLists.txt
core/graphics/dx12/: CMakeLists.txt  __dx12samplerender.cpp  dx12driver.cpp  dx12driver.hpp  dx12helper.hpp  dx12helpers.hpp  dx12sample.cpp
core/graphics/dx12/techniques/simple/: CMakeLists.txt  render.cpp  render.hpp
core/graphics/dx12/techniques/simple/shaders/: ps.hlsl  vs.hlsl
core/graphics/dxgi/: CMakeLists.txt  dxgi.cpp  dxgi.hpp
core/graphics/generic/: Camera.cpp  Camera.h  Lights.h  Material.h  Mesh.h  MicroManager.cpp  MicroManager.h
core/graveyard/: BufferArray.cpp  Engine.cpp  Engine.h  GameEvent.h  RawLoaders.cpp  RawLoaders.h  RawResource.h  ResourceManager.h  Visuals.h
core/graveyard/render/: Material.cpp  Material.h  MeshBuilder.h  MeshCPU.cpp  MeshCPU.h  MeshManager.cpp  MeshManager.h  MeshStatic.cpp  MeshStatic.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  ModelManager.h  Render.h  RenderQue.cpp  RenderQue.h  RenderableInstance.cpp  RenderableInstance.h
core/input/: KeyMapper.hpp
core/math/: CMakeLists.txt  Math.hpp  RectT.h  RectT.hpp  Vector2.h  Vector2.hpp  Vector3.hpp  concepts.hpp
core/os/: CMakeLists.txt  os.hpp
core/os/windows/: CMakeLists.txt  CriticalSection.h  Window.cpp  Window.h  WindowsGame.cpp  WindowsGame.h  WindowsHelpers.hpp  os.cpp  pch.hpp
core/os/windows/unused/: Job.cpp  Job.h  Jobs.cpp  Jobs.h  ThreadPool.cpp  ThreadPool.h
core/procedural/: Bezier.h  BoxGenerator.cpp  BoxGenerator.h  Geometry.cpp  Geometry.h  MakeBox.cpp  MeshGeneratorHelper.cpp  MeshGeneratorHelper.h  PlaneGenerator.cpp  PlaneGenerator.h  SphereGenerator.cpp  SphereGenerator.h  TeapotData.hpp
core/util/: CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Event.hpp  FileSystemRawLoader.cpp  FileSystemRawLoader.hpp  FixedFunctionFloat.h  GenericHandle.cpp  GenericHandle.h  GenericHandleManager.h  Handle.hpp  InvasiveRefCount.h  Lock.h  Math.h  MinTypeSize.hpp  MultiIterator.hpp  Overload.hpp  RefCountPointer.h  TagArray.h  TimeStep.hpp  TupleHelper.h  UniqueInt.hpp  VectorCache.hpp  soa.hpp
core/util/contracts/: Temp.hpp
core/util/unused/: Work.cpp  Work.h
tests/: LowLevelTest.cpp  LowLevelTest.h  MicroManagerTest.cpp  MicroMangerTest.h  RenderTest.cpp
